--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
 <h1><%= facade.total_members %> Members</h1>
-<%= facade.member_data.each do |member| %>
+<% facade.member_data.each do |member| %>
 <section class="house_members">
   <ul>
     <li class="house_member_name"><%= member.name %></li>
